# signale.py

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.py
signale/: __init__.py
signalepy/: __init__.py
