[tool.poetry]
name = "signale"
version = "0.4.0"
description = "Elegant Console Logger For Python Command Line Apps"
authors = ["Shardul Nalegave <nalegaveshardul40@gmail.com>", "Marcel Waldvogel <marcel.waldvogel@trifence.ch"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/MarcelWaldvogel/signale.py"
keywords = [
	"logger",
	"cli",
	"elegant",
	"command-line",
	"colored"
]
packages = [
	{ include = "signalepy" }
]

[tool.poetry.dependencies]
python = "3"

[tool.poetry.dev-dependencies]
